vlib/v/checker/tests/unreachable_code.out
vlib/v/checker/tests/unreachable_code.v:3:7: error: unreachable code 
    1 | fn foo() int {
    2 |     return if 1 == 1 { 1 } else { 2 }
    3 |     a := 1
      |          ^
    4 |     println(a)
    5 | }
